--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "jsonwebtoken": "^9.0.1",
     "lucide-react": "^0.265.0",
     "mime-types": "^2.1.35",
+    "mongodb": "^7.0.0",
     "mongoose": "^7.4.1",
     "next": "^14.1.0",
     "next-auth": "^4.24.8",
     "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.4",
     "openai": "^4.57.3",
     "postcss": "^8.4.41",
